# mpv

./: CMakeLists.txt  README-vita.md
TOOLS/: vita-gen-icons.py
etc/vita/: input.conf
input/: input.c
misc/: bstr.h
options/: m_option.c  m_option.h
osdep/: main-fn-vita.c
osdep/vita/: emulator.h  emulator_audio.c  emulator_fontconfig_fallback.c  emulator_fontconfig_unix.c  emulator_platform.c  emulator_render.c  key_helper.c  key_helper.h  player_osc.c  player_osc.h  player_perf.c  player_perf.h  shape_draw.c  shape_draw.h  simulator.h  simulator_audio.c  simulator_fontconfig_fallback.c  simulator_fontconfig_unix.c  simulator_platform.c  simulator_render.c  ui_context.h  ui_device.h  ui_driver.h  ui_panel.h  ui_panel_files.c  ui_panel_player.c  vita_audio.c  vita_platform.c  vita_render.c
player/: client.c
video/: mp_image.h
video/decode/: vd_lavc.c
